Fix the toggle switch for the dark mode

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -38,15 +38,7 @@
   border-radius: 10px;
   padding: 10px;
   cursor: pointer;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
   margin-bottom: 10px;
-}
-
-.dashboard .side-bar .links-wrapper ul li:hover {
-  background-color: var(--primary-default-100);
-  color: var(--primary-default-500);
 }
 
 .dashboard .side-bar .links-wrapper ul li.active {
@@ -54,34 +46,71 @@
   color: var(--white);
 }
 
-.dashboard .side-bar .links-wrapper .icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.dashboard .side-bar .dark-mode .toggle-checkbox {
+  --webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.dashboard .side-bar .dark-mode .toggle-switch {
+  width: 58px;
+  height: 32px;
+  border-radius: 16px;
   background-color: #f6f7f9;
-  border-radius: 100%;
-  padding: 5px;
+  position: relative;
+  transition: 0.3s;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1;
+  font-size: 20px;
 }
-
-.dashboard .side-bar .links-wrapper .icons div {
-  color: var(--white);
-  padding: 5px;
-  border-radius: 50%;
-}
-
-.dashboard .side-bar .links-wrapper .icons div.active {
+.dashboard .side-bar .dark-mode .toggle-switch::before {
+  content: "";
   background-color: var(--primary-default-500);
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border-radius: 50%;
+  transition: 0.3s left;
+  z-index: -1;
 }
 
-.dashboard .side-bar .links-wrapper .icons svg {
-  color: var(--secondary-light-300);
+.dashboard
+  .side-bar
+  .dark-mode
+  .toggle-checkbox:checked
+  + .toggle-switch::before {
+  left: 31px;
 }
 
-.dashboard .side-bar .links-wrapper .icons div.active {
-  color: var(--primary-default-500);
+.dashboard
+  .side-bar
+  .dark-mode
+  .toggle-checkbox:checked
+  + .toggle-switch
+  svg:last-child {
+  color: var(--white);
+}
+
+.dashboard
+  .side-bar
+  .dark-mode
+  .toggle-checkbox:checked
+  + .toggle-switch
+  svg:first-child {
+  color: inherit;
+}
+
+.dashboard
+  .side-bar
+  .dark-mode
+  .toggle-checkbox
+  + .toggle-switch
+  svg:first-child {
+  color: var(--white);
 }
 
 .dashboard .side-bar .log-out {
@@ -95,9 +124,9 @@
   color: var(--secondary-light-300);
   font-size: 16px;
   cursor: pointer;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: 0.3s background-color;
+  -o-transition: 0.3s background-color;
+  transition: 0.3s background-color;
   -webkit-transform: translateY(20px);
   -ms-transform: translateY(20px);
   transform: translateY(20px);
